--- a/app/src/main/res/layout/activity_create_room.xml
+++ b/app/src/main/res/layout/activity_create_room.xml
@@ -22,7 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:text="대기열 생성"
+                android:text="Create Queue"
                 android:textSize="28dp">
             </TextView>
         </LinearLayout>
@@ -36,7 +36,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="10dp"
-                android:text="방제목"
+                android:text="Room Title"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
             <EditText
@@ -44,7 +44,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@drawable/shape3"
-                android:hint="밥친구에게 보여줄 제목을 입력하세요."
+                android:hint="Enter a title to show people."
                 android:maxLength="24"
                 android:textColor="@color/black"
                 android:textColorHint="@color/black"
@@ -63,7 +63,7 @@
                 android:layout_marginTop="10dp"
                 android:layout_marginLeft="10dp"
                 android:layout_marginRight="10dp"
-                android:text="방 설정하기"
+                android:text="Room Setting"
                 android:textColor="@color/black"
                 android:textSize="18sp" />
             <LinearLayout
@@ -91,7 +91,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="종류"
+                                android:text="Type"
                                 android:textColor="@color/black"
                                 android:textSize="14dp"></TextView>
                             <Spinner
@@ -116,7 +116,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="음식명"
+                                android:text="Food"
                                 android:textColor="@color/black"
                                 android:textSize="14dp"></TextView>
                             <Spinner
@@ -139,7 +139,7 @@
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:gravity="center"
-                                android:text="음식점"
+                                android:text="Restaurant"
                                 android:textColor="@color/black"
                                 android:textSize="14dp"></TextView>
                             <Spinner
@@ -180,7 +180,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
-                                android:text="태그추가"
+                                android:text="Add tag"
                                 android:textSize="12sp">
                             </TextView>
                         </LinearLayout>
@@ -215,7 +215,7 @@
                                 android:layout_marginTop="2dp"
                                 android:paddingLeft="6dp"
                                 android:background="@drawable/shape6"
-                                android:hint="태그를 입력하세요."
+                                android:hint="Please enter a tag."
                                 android:textSize="12sp"
                                 android:textColor="@color/black"
                                 android:textColorHint="@color/black">
@@ -236,7 +236,7 @@
             android:shadowColor="@color/black"
             android:shadowDx="-7.0"
             android:shadowDy="7.0"
-            android:text="지도보기"
+            android:text="Map"
             android:textColor="@color/black"
             android:textSize="24sp" />
         <FrameLayout
@@ -268,7 +268,7 @@
             android:layout_margin="10dp"
             android:background="@drawable/shape3"
             android:backgroundTint="@color/PColor2"
-            android:text="등록하기"
+            android:text="Submit"
             android:textSize="36dp"
             android:padding="16dp"
             app:layout_constraintEnd_toEndOf="parent"
