--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -29,8 +29,10 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="right"
                 android:background="@color/PColor2"
+                android:textAllCaps="false"
                 style="?borderlessButtonStyle"
-                android:text="거리순"><!--거리순 이름순(기본) 폐점시간순 -->
+                android:text="Distance"
+                android:textSize="12sp"><!--거리순 이름순(기본) 폐점시간순 -->
             </Button>
         </LinearLayout>
 
