--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -17,7 +17,7 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="10dp"
                 android:gravity="center"
-                android:text="프로필"
+                android:text="Profile"
                 android:textSize="24dp"
                 android:textColor="@color/black">
             </TextView>
@@ -96,7 +96,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="이름 : "
+                        android:text="Name : "
                         android:textColor="@color/black"
                         android:textSize="14sp"></TextView>
                     <EditText
@@ -118,7 +118,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:text="성별 : "
+                        android:text="Sex : "
                         android:textColor="@color/black"
                         android:textSize="14sp"></TextView>
                     <EditText
@@ -145,7 +145,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="10dp"
-                        android:text="한 줄 소갯말"
+                        android:text="Introduction"
                         android:textSize="18dp"
                         android:textColor="@color/black">
                     </TextView>
