--- a/app/src/main/res/layout/activity_record.xml
+++ b/app/src/main/res/layout/activity_record.xml
@@ -26,7 +26,7 @@
                 android:shadowColor="@color/black"
                 android:shadowDx="-7.0"
                 android:shadowDy="7.0"
-                android:text="매칭기록"
+                android:text="Record"
                 android:textColor="@color/black"
                 android:textSize="28sp" />
             <LinearLayout
@@ -64,7 +64,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="날짜 : "
+                    android:text="Date : "
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
                 <TextView
@@ -73,7 +73,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="2022/11/26"
+                    android:text="18/12/2022"
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -87,7 +87,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="음식점 명 : "
+                    android:text="Restaurant Name : "
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
                 <TextView
@@ -96,7 +96,7 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="부대통령"
+                    android:text="Sausagident"
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
             </LinearLayout>
@@ -110,18 +110,20 @@
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="함께한 밥친구 수 : "
+                    android:text="Number of people ate together : "
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
+                <!--
                 <TextView
                     android:id="@+id/tv_peopleNum"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="800000 명"
+                    android:text=""
                     android:textSize="16dp"
                     android:textColor="@color/black"/>
+                    -->
             </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
@@ -134,8 +136,8 @@
                     android:layout_marginBottom="10dp"
                     android:padding="2dp"
                     android:ellipsize="end"
-                    android:text="함게한 밥친구들"
-                    android:textSize="20dp"
+                    android:text="People ate together"
+                    android:textSize="18dp"
                     android:textColor="@color/black"/>
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -146,22 +148,22 @@
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0">
+                        android:layout_weight="0.05">
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="프로필 사진"
+                        android:text="Profile"
                         android:textColor="@color/black"></TextView>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.15">
+                        android:layout_weight="0.1">
                     </LinearLayout>
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="이름"
+                        android:text="Name"
                         android:textColor="@color/black"></TextView>
                     <LinearLayout
                         android:layout_width="wrap_content"
@@ -171,22 +173,12 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="평점"
+                        android:text="Rating"
                         android:textColor="@color/black"></TextView>
                     <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="match_parent"
-                        android:layout_weight="0.3">
-                    </LinearLayout>
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="평가하기"
-                        android:textColor="@color/black"></TextView>
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:layout_weight="0.15">
+                        android:layout_weight="0.35">
                     </LinearLayout>
                 </LinearLayout>
                 <ScrollView
