--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -53,8 +53,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0.33"
-                android:text="혼자말고"
-                android:textSize="22sp"
+                android:text="Not alone"
+                android:textSize="16sp"
                 android:textColor="@color/black"
                 android:gravity="bottom"/>
 
@@ -72,8 +72,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.33"
                 android:textColor="@color/black"
-                android:text="같이먹자"
-                android:textSize="22sp"/>
+                android:text="Eat together"
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
@@ -299,7 +299,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="50dp"
                     android:layout_marginTop="20dp"
-                    android:text="패스워드 재확인"
+                    android:text="Confirm Password"
                     android:layout_weight="0.05"
                     />
 
@@ -328,7 +328,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="회원가입"
+                    android:text="Regist"
                     android:background="@drawable/shape7"
                     android:textColor="@color/black"
                     android:layout_gravity="center"
