--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -56,8 +56,8 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_weight="0.33"
-                android:text="혼자말고"
-                android:textSize="20sp"
+                android:text="Not alone"
+                android:textSize="16sp"
                 android:textColor="@color/black"
                 android:gravity="bottom"/>
 
@@ -77,8 +77,8 @@
                 android:layout_gravity="center"
                 android:layout_weight="0.33"
                 android:textColor="@color/black"
-                android:text="같이먹자"
-                android:textSize="20sp"/>
+                android:text="Eat together"
+                android:textSize="16sp"/>
         </LinearLayout>
         <LinearLayout
             android:layout_width="wrap_content"
