--- a/app/src/main/res/layout/all_text_view.xml
+++ b/app/src/main/res/layout/all_text_view.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:gravity="center"
-        android:text="전종훈님이 입장하셨습니다."
+        android:text="Lee ji hyeong has entered."
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
