--- a/app/src/main/res/layout/notification_view.xml
+++ b/app/src/main/res/layout/notification_view.xml
@@ -25,14 +25,14 @@
             android:layout_height="match_parent"
             android:layout_weight="0.3"
             android:orientation="horizontal"></LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="알림창"
-            android:textSize="24sp"
-            android:textColor="@color/black">
-        </TextView>
+            android:text="Notification"
+            android:textColor="@color/black"
+            android:textSize="24sp"></TextView>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
@@ -54,9 +54,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginRight="10dp"
-            android:text="모두 지우기"
-            android:textColor="@color/black"
-            android:background="@drawable/shape5"/>
+            android:background="@drawable/shape5"
+            android:text="Clear"
+            android:textColor="@color/black" />
     </LinearLayout>
     <ScrollView
         android:layout_width="match_parent"
