--- a/app/src/main/res/layout/realtime_view.xml
+++ b/app/src/main/res/layout/realtime_view.xml
@@ -32,8 +32,8 @@
                         android:gravity="center"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:text="존마탱"
-                        android:textSize="20sp">
+                        android:text="Pork Back-bone Stew"
+                        android:textSize="10sp">
                     </TextView>
                 </FrameLayout>
             </LinearLayout>
@@ -58,7 +58,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="제목"
+                            android:text="Title"
                             android:textSize="12sp"
                             android:padding="2dp"
                             android:background="@color/PColor2">
@@ -72,8 +72,8 @@
                             android:id="@+id/tv_roomname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="이 씨발련들아 밥먹자우라라라라라랄ㄹ"
-                            android:maxLength="14"
+                            android:text="Guys, let's eat WRYYYY!!!!!"
+                            android:maxLength="30"
                             android:layout_marginLeft="4dp"
                             android:textSize="12sp"
                             android:paddingTop="6dp"
@@ -93,7 +93,7 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="식당명"
+                            android:text="Name"
                             android:textSize="12sp"
                             android:padding="2dp"
                             android:background="@color/PColor2">
@@ -107,8 +107,8 @@
                             android:id="@+id/tv_roomrestaurantname"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="맛있는맛있는맛있는녀석들전부모여라시발"
-                            android:maxLength="12"
+                            android:text="Master of rice soup"
+                            android:maxLength="30"
                             android:layout_marginLeft="4dp"
                             android:textSize="12sp"
                             android:paddingTop="6dp"
@@ -125,7 +125,7 @@
                         android:id="@+id/tv_roomtag1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="#호랑나비한마리가~기모찌찌왕찌찌ㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋㅋzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzzz"
+                        android:text="# Come in five minutes # Don't be late\n # talkative friends # funny friends \n # regardless of gender!!"
                         android:textSize="10sp"
                         android:maxLines="3"
                         android:ellipsize="end"
