--- a/app/src/main/res/layout/room_list.xml
+++ b/app/src/main/res/layout/room_list.xml
@@ -25,9 +25,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:text="존마탱"
+            android:text="Pork Back-bone Stew"
             android:textColor="@color/white"
-            android:textSize="20sp">
+            android:textSize="10sp">
         </TextView>
     </FrameLayout>
     <LinearLayout
@@ -50,7 +50,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="제목"
+                    android:text="Title"
                     android:textSize="12sp"
                     android:padding="2dp"
                     android:background="@color/PColor2">
@@ -64,7 +64,7 @@
                     android:id="@+id/tv_roomName"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="이 씨발련들아 밥먹자우라라라라라랄ㄹ"
+                    android:text="Guys, let's eat WRYYYY!!!!!"
                     android:maxLength="14"
                     android:layout_marginLeft="4dp"
                     android:textSize="12sp"
@@ -85,7 +85,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="식당명"
+                    android:text="Name"
                     android:textSize="12sp"
                     android:padding="2dp"
                     android:background="@color/PColor2">
@@ -99,7 +99,7 @@
                     android:id="@+id/tv_restaurant"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="맛있는맛있는맛있는녀석들전부모여라시발"
+                    android:text="Master of rice soup"
                     android:maxLength="12"
                     android:layout_marginLeft="4dp"
                     android:textSize="12sp"
